# BamM

./: .gitignore  MANIFEST.in  README.md  index.html  setup.py  tt.py
OSX/: README  install.sh
bamm/: BamFiles.py  BamLinks.py  BamM.py  BamParser.py  bamExtractor.py  bamFile.py  bamFilter.py  bamFilterer.py  bamLink.py  bamLink.py~  bamMaker.py  bamParser.py  bamProfiler.py  bamRead.py  bammExceptions.py  bammExceptions.py~  cWrapper.py  cWrapper.py~
c/: AUTHORS  Makefile.in  aclocal.m4  autogen.sh  bamExtractor.c  bamExtractor.h  bamFilter.c  bamFilter.h  bamParser.c  bamParser.h  bamProfiler.c  bamProfiler.h  bamRead.c  bamRead.h  config.h  configure  configure.ac  coverageEstimators.c  coverageEstimators.h  pairedLink.c  pairedLink.h  pqsort.h  runBamFilter  runBamFilter.c  runBamParser  runBamParser.c  runBamProfiler  runBamProfiler.c  stats.c  stats.h  test.c  zpipe.c
c/bam/: Makefile  Makefile.in  bamParser  bamParser.c  bamParser.h  config.h  config.h.in  config.status  configure  configure.ac  example.c  extractor.c  fred  pairedLink.c  pairedLink.h  parser.c  stats.h
c/bam/autom4te.cache/: output.0  output.1  output.2  output.3  output.4  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
c/bam/m4/: ax_libcfu.m4~  ax_libhts.m4~
c/examples/: extractor.c  parser.c
c/htslib-1.2.1/: Makefile  configure
c/htslib-1.3.1/: config.h  config.h.in  configure
c/libcfu-0.03/: AUTHORS  Makefile.am  Makefile.in  README  configure  configure.ac  configure.lineno
c/libcfu-0.03/autom4te.cache/: output.1  requests  traces.0  traces.2  traces.3
c/libcfu-0.03/include/: cfu.h  cfuconf.h  cfuhash.h  cfulist.h  cfustring.h  cfuthread_queue.h  cfutime.h
c/libcfu-0.03/src/: Makefile.am  Makefile.in  cfu.c  cfuconf.c  cfuhash.c  cfulist.c  cfuopt.c  cfustring.c  cfuthread_queue.c  cfutime.c
c/libcfu-0.03/src/.deps/: cfu.Po  cfuconf.Po  cfuhash.Po  cfulist.Po  cfuopt.Po  cfustring.Po  cfuthread_queue.Po  cfutime.Po
c/m4/: ax_libcfu.m4  ax_libhts.m4
c/test/: compile_runBamProfiler.sh  runBamFilter  runBamFilter.c  runBamProfiler.c
dev_docs/: api-objects.txt  bamExtractor.html  bamFile.html  bamLink.html  bamMaker.html  bamParser.html  bamRead.html  bamm-module.html  bamm-pysrc.html  bamm.bamExtractor-module.html  bamm.bamExtractor-pysrc.html  bamm.bamExtractor.BamExtractor-class.html  bamm.bamFile-module.html  bamm.bamFile-pysrc.html  bamm.bamFile.BM_bamFile-class.html  bamm.bamFile.BM_bamType-class.html  bamm.bamFile.BM_coverageType-class.html  (+62 more)
(+110 files in other folders)
